--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -15,7 +15,7 @@ job:
       - name: Setup Go
         uses: actions/setup-go
           with:
-            go-version: 1.14
+            go-version: '1.14'
           id: go
 
       - name: Checkout App
