--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Setup Go
-        uses: actions/setup-go
+        uses: actions/setup-go@v1
         with:
           go-version: '1.14'
         id: go
