--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -7,19 +7,52 @@ on:
     branches: [master]
 
 jobs:
-  build:
-    name: Build Env
+  lint:
+    name: Lint
     runs-on: ubuntu-latest
-
     steps:
-      - name: Setup Go
+      - name: Set up Go
         uses: actions/setup-go@v1
         with:
-          go-version: '1.14'
-        id: go
+          go-version: 1.14
 
-      - name: Checkout App
+      - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Build App
+      - name: Lint Go code
+        run: |
+          export PATH=$PATH:$(go env GOPATH)/bin
+          go get -u golang.org/x/lint/golint
+          make lint
+
+  test:
+    name: Test
+    runs-on: ubuntu-latest
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.14
+
+      - name: Check out code
+          uses: actions/checkout@v2
+
+      - name: Test Go driver file
         run: go test -run driver_test.go
+
+  build:
+    name: Build
+    runs-on: ubuntu-latest
+    needs: [lint, test]
+
+    steps:
+      - name: Set up Go
+        uses: actions/setup-go@v1
+        with:
+          go-version: 1.14
+
+      - name: Check out code
+        uses: actions/checkout@v2
+
+      - name: Build app
+        run: go build driver.go
